# launchstore

./: .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .secrets-example.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  env-example.env  ormconfig.json  package-lock.json  package.json  pyproject.toml  requirements-system.md  script.sql  settings.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: user-stories.md
.github/workflows/: python-app.yml
app/: __init__.py
app/ext/: database.py  migrate.py  swagger.py
docs/: script.sql
public/: scripts.js  styles.css
public/styles/: index.css  menu-accounts.css  messages.css  session.css
src/: router.js  server.js  server.ts
src/app/config/: db.js  session.js
src/app/controllers/: HomeController.js  ProductController.js  SearchController.js  SessionController.js  UserController.js  home.js  product.js  search.js
src/app/lib/: mailer.js  utils.js
src/app/middlewares/: multer.js  session.js
src/app/models/: Base.js  Category.js  File.js  Product.js  User.js
src/app/validators/: session.js  user.js
src/app/views/: layout.njk
src/app/views/home/: index.njk
src/app/views/parts/: footer.njk  header.njk  messages.njk  section-products.njk  styles.njk
src/app/views/products/: create.njk  edit.njk  fields.njk  show.njk
src/app/views/search/: index.njk
src/app/views/session/: fields.njk  login.njk  (+3 more)
src/database/: index.ts
src/database/migrations/: 1620071157650-CreateUser.ts
src/routes/: index.js  products.js  users.js
test/: conftest.py  test_app.py
(+4 files in other folders)
